--- a/envoy.yaml
+++ b/envoy.yaml
@@ -23,8 +23,7 @@ static_resources:
                     routes:
                       - match: { prefix: "/grpc/" }
                         route:
-                          prefix_rewrite: "/"
-                          cluster: template_service
+                          cluster: greeter_service
                           timeout: 0s
                           max_stream_duration:
                             grpc_timeout_header_max: 0s
@@ -46,11 +45,12 @@ static_resources:
                   typed_config:
                     "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
   clusters:
-    - name: template_service
+    - name: greeter_service
       connect_timeout: 0.25s
       type: logical_dns
       http2_protocol_options: {}
       lb_policy: round_robin
+      # win/mac hosts: Use address: host.docker.internal instead of address: localhost in the line below
       load_assignment:
         cluster_name: cluster_0
         endpoints:
@@ -58,5 +58,5 @@ static_resources:
             - endpoint:
                 address:
                   socket_address:
-                    address: localhost
+                    address: 0.0.0.0
                     port_value: 9090
