--- a/envoy.yaml
+++ b/envoy.yaml
@@ -23,6 +23,7 @@ static_resources:
                     routes:
                       - match: { prefix: "/grpc/" }
                         route:
+                          prefix_rewrite: "/"
                           cluster: greeter_service
                           timeout: 0s
                           max_stream_duration:
@@ -58,5 +59,5 @@ static_resources:
             - endpoint:
                 address:
                   socket_address:
-                    address: 0.0.0.0
+                    address: grpcserver
                     port_value: 9090
